feat: 用户注册迁移为自维护
